// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box tests should render 1`] = `
<div>
  <div
    class="sc-bdvvtL gPlMRc"
  />
</div>
`;

exports[`Box tests should render space media query 1`] = `
<div>
  <div
    class="sc-bdvvtL hmqSrW"
  />
</div>
`;
